AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/ingress/components/sas-decisions-definitions/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /decisions/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-decisions
    sas.com/admin: namespace
  name: sas-decisions
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-decisions
          servicePort: 80
        path: /decisions

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /treatmentDefinitions/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-treatment-definitions
    sas.com/admin: namespace
  name: sas-treatment-definitions
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-treatment-definitions
          servicePort: 80
        path: /treatmentDefinitions
